# chmnu_schedule_app

./: .dockerignore  .env.example  .flake8  .gitignore  .pre-commit-config.yaml  Dockerfile  Makefile  Readme.md  entrypoint.sh  manage.py  pyproject.toml
.github/workflows/: test_application.yaml
core/api/: exception_handlers.py  filters.py  schemas.py  urls.py
core/api/v1/: urls.py
core/api/v1/clients/: handlers.py  schemas.py  urls.py
core/api/v1/schedule/: urls.py
core/api/v1/time/: handlers.py  schemas.py  urls.py
core/apps/clients/: admin.py  apps.py
core/apps/clients/entities/: client.py  email_confirmation_token.py  sophomore.py  token.py
core/apps/common/: authentication.py  constants.py  exceptions.py  factory.py  filters.py  models.py
core/apps/notifications/: apps.py
core/apps/schedule/: admin.py  apps.py
core/project/: asgi.py  containers.py  middlewares.py  settings.py  wsgi.py
core/project/containers/: containers.py
core/project/settings/: dev.py  main.py  prod.py
docker_compose/: app.prod.yaml  app.yaml  monitoring.yaml  storages.yaml  test.yaml
nginx/: Dockerfile  Dockerfile.prod  nginx.conf  nginx.prod.conf.template
nginx/static/: privacy-policy.html
nginx/well-known/: assetlinks.json
tests/: conftest.py
tests/app/client/: conftest.py
tests/app/schedule/: conftest.py
tests/factories/client/: client.py  issuedjwttoken.py  role.py
tests/factories/schedule/: faculty.py  group.py  group_lesson.py  lesson.py  room.py  subject.py  teacher.py  timeslot.py
tests/fixtures/client/: client.py  utils.py
(+289 files in other folders)
